[package]
name = "rust-taro"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MPL-2.0"
description = "Taproot Asset Representation Overlay (Bitcoin)"
homepage = "https://github.com/judica-org/rust-taro"
documentation = "https://docs.rs/rust_taro"
repository = "https://github.com/judica-org/rust-taro"
readme = "README.md"

[dependencies]
hex = "0.4.3"
sha2 = "0.10.6"

[features]
memory-db = []

[dev-dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
